--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tiptap/extension-bubble-menu": "^3.2.0",
     "@tiptap/extension-image": "^3.2.0",
     "@tiptap/extension-placeholder": "^3.2.0",
+    "@tiptap/extension-table": "^3.4.1",
     "@tiptap/pm": "^3.2.0",
     "@tiptap/react": "^3.2.0",
     "@tiptap/starter-kit": "^3.2.0",
